[gd_scene load_steps=9 format=3 uid="uid://5pmdmj5q2obg"]

[ext_resource type="Script" path="res://scripts/enemy_movement.gd" id="1_gb5o1"]
[ext_resource type="AudioStream" uid="uid://chwpe4dht6ql8" path="res://audio/692084__gamer500__death-sound-pixel.wav" id="3_327bb"]
[ext_resource type="Texture2D" uid="uid://ddln2f36eclis" path="res://assets/sprites/death_skull.png" id="3_f3ltb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sxb7y"]
radius = 299.167

[sub_resource type="CircleShape2D" id="CircleShape2D_837ai"]
radius = 70.0071

[sub_resource type="CircleShape2D" id="CircleShape2D_22b13"]
radius = 64.1249

[sub_resource type="Animation" id="Animation_ag7aq"]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xfvrh"]
_data = {
"death": SubResource("Animation_ag7aq")
}

[node name="enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 36
script = ExtResource("1_gb5o1")

[node name="search_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="search_area"]
shape = SubResource("CircleShape2D_sxb7y")

[node name="hit_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_area"]
shape = SubResource("CircleShape2D_837ai")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_22b13")

[node name="hurt_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_area"]
shape = SubResource("CircleShape2D_837ai")

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_f3ltb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xfvrh")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_327bb")

[connection signal="body_entered" from="hit_area" to="." method="_on_hit_area_body_entered"]
[connection signal="body_entered" from="hurt_area" to="." method="_on_hurt_area_body_entered"]
